--- a/module16.ipynb
+++ b/module16.ipynb
@@ -356,16 +356,16 @@
     {
      "data": {
       "text/plain": [
-       "array([8187,  958, 5422, 6270, 1367, 6372, 7353, 3691, 2262, 6202, 5169,\n",
-       "       4944,   37, 5522, 2155, 1136, 9034, 3839, 7120, 4511, 5680,  480,\n",
-       "       8506, 6012, 7195, 2710, 2521, 3516, 7160, 2753, 2787, 5494, 6151,\n",
-       "       5874, 8122, 7022, 6986, 1302,  466, 2404, 3510, 2258, 7962, 7245,\n",
-       "       3162, 2102, 6246, 5585, 4288, 9183, 9886, 7404, 4107, 1816, 4873,\n",
-       "       9564, 6171, 7719, 6733, 9033, 8560, 1585,  796, 2102, 9202, 6616,\n",
-       "       6086, 3057, 3355, 2899, 2238, 4619,  964, 3362, 5185, 5518, 9536,\n",
-       "       2470, 4633, 3492, 1754, 2314, 8267, 4306, 5119, 3500, 9062, 4807,\n",
-       "       9904, 3200, 3965, 1353, 5298, 9662, 9305, 9609, 2472, 4247, 1349,\n",
-       "       2306])"
+       "array([2888, 7504, 8218, 5678, 3278, 5957, 2967, 7453, 2034,  270, 7919,\n",
+       "       2977, 3783, 4089, 5011, 7778, 1889, 9653, 2631, 9621, 2411, 6118,\n",
+       "       3551, 7086, 4536, 6297, 7419, 3017, 5570, 7612, 9652, 4496, 5235,\n",
+       "       6949, 4350, 9997, 3233, 2809, 4627, 7350, 6866, 6659, 9083, 3442,\n",
+       "       7948, 3430, 4072,   44, 2835, 2578, 1995,  167, 8677, 1086, 2299,\n",
+       "       2762, 2984, 7680, 4352, 1930, 1243, 7363, 2370,  484, 5395, 1327,\n",
+       "       6054, 9425, 4641, 2284, 9958, 3010, 6005, 7787, 6814, 7465, 8942,\n",
+       "       3903, 4167, 2829, 2304, 1502, 1069, 7586, 8895, 6571, 9659, 4175,\n",
+       "       4293, 6630, 1567, 3498, 7987, 6770, 7141, 7770, 9153, 5794, 3527,\n",
+       "       4373])"
       ]
      },
      "execution_count": null,
@@ -386,16 +386,16 @@
     {
      "data": {
       "text/plain": [
-       "array([  37,  466,  480,  796,  958,  964, 1136, 1302, 1349, 1353, 1367,\n",
-       "       1585, 1754, 1816, 2102, 2102, 2155, 2238, 2258, 2262, 2306, 2314,\n",
-       "       2404, 2470, 2472, 2521, 2710, 2753, 2787, 2899, 3057, 3162, 3200,\n",
-       "       3355, 3362, 3492, 3500, 3510, 3516, 3691, 3839, 3965, 4107, 4247,\n",
-       "       4288, 4306, 4511, 4619, 4633, 4807, 4873, 4944, 5119, 5169, 5185,\n",
-       "       5298, 5422, 5494, 5518, 5522, 5585, 5680, 5874, 6012, 6086, 6151,\n",
-       "       6171, 6202, 6246, 6270, 6372, 6616, 6733, 6986, 7022, 7120, 7160,\n",
-       "       7195, 7245, 7353, 7404, 7719, 7962, 8122, 8187, 8267, 8506, 8560,\n",
-       "       9033, 9034, 9062, 9183, 9202, 9305, 9536, 9564, 9609, 9662, 9886,\n",
-       "       9904])"
+       "array([  44,  167,  270,  484, 1069, 1086, 1243, 1327, 1502, 1567, 1889,\n",
+       "       1930, 1995, 2034, 2284, 2299, 2304, 2370, 2411, 2578, 2631, 2762,\n",
+       "       2809, 2829, 2835, 2888, 2967, 2977, 2984, 3010, 3017, 3233, 3278,\n",
+       "       3430, 3442, 3498, 3527, 3551, 3783, 3903, 4072, 4089, 4167, 4175,\n",
+       "       4293, 4350, 4352, 4373, 4496, 4536, 4627, 4641, 5011, 5235, 5395,\n",
+       "       5570, 5678, 5794, 5957, 6005, 6054, 6118, 6297, 6571, 6630, 6659,\n",
+       "       6770, 6814, 6866, 6949, 7086, 7141, 7350, 7363, 7419, 7453, 7465,\n",
+       "       7504, 7586, 7612, 7680, 7770, 7778, 7787, 7919, 7948, 7987, 8218,\n",
+       "       8677, 8895, 8942, 9083, 9153, 9425, 9621, 9652, 9653, 9659, 9958,\n",
+       "       9997])"
       ]
      },
      "execution_count": null,
@@ -634,16 +634,16 @@
     {
      "data": {
       "text/plain": [
-       "array([7057, 8982, 6606, 6981, 8727, 5004, 5536, 8577, 9979, 8290, 3230,\n",
-       "       4188,  135, 3380, 4856, 9121, 3749, 5426, 2633, 7474, 2869, 5670,\n",
-       "       7336, 9965, 3115, 5781,   66, 7842, 2676, 5213, 9921, 1885, 7811,\n",
-       "       9818, 1399, 9948, 6199, 6503, 9580, 5273, 2707, 4139, 5125, 7785,\n",
-       "       4224, 5791, 1493, 4056, 7134, 7650, 8797, 6164, 1640, 5129, 8599,\n",
-       "       1867, 8935,  786,  652, 8848, 2841, 4881, 7322, 8157, 5493, 3304,\n",
-       "       5568, 1539, 3963,  161, 2815, 3510, 2841, 1173, 7191, 7438, 6429,\n",
-       "       7577, 2329, 1891, 3405, 9744, 8371,  786, 4641, 8996,  198, 7945,\n",
-       "       5536, 8184, 5451, 6427, 2269, 3993, 1594,  667, 6082, 3244, 9455,\n",
-       "       8738])"
+       "array([8185, 2835, 9914, 3653, 3990, 4262,  777, 3266, 3432, 4531, 4240,\n",
+       "        481,  104, 7163, 1088, 5456, 9847, 3778, 1288, 2359, 7517, 5223,\n",
+       "       5570, 7584, 1168,  342, 7900, 8179, 5033, 8845, 5522, 4008, 4270,\n",
+       "       3760, 4084, 2491, 9956, 5687, 7908, 4513, 2108, 5540, 5871, 6434,\n",
+       "       4508, 4863, 7565, 7620,  125, 4459,  888, 7304, 4284, 4675, 1210,\n",
+       "       5502,  475, 6398, 9190, 7051, 9722, 3524, 7895, 2356, 2281, 8947,\n",
+       "       4777, 4623, 5184,   29, 7737, 3397, 5684, 9264, 4995, 9027, 1249,\n",
+       "       9002, 5670, 6621, 9685, 7160, 9234, 6871, 8589, 3153, 7335, 9368,\n",
+       "        781, 3344, 8899, 2724, 4467, 9453, 3100, 1746, 1531, 3236, 2737,\n",
+       "       8118])"
       ]
      },
      "execution_count": null,
@@ -664,16 +664,16 @@
     {
      "data": {
       "text/plain": [
-       "array([  66,  135,  161,  198,  652,  667,  786,  786, 1173, 1399, 1493,\n",
-       "       1539, 1594, 1640, 1867, 1885, 1891, 2269, 2329, 2633, 2676, 2707,\n",
-       "       2815, 2841, 2841, 2869, 3115, 3230, 3244, 3304, 3380, 3405, 3510,\n",
-       "       3749, 3963, 3993, 4056, 4139, 4188, 4224, 4641, 4856, 4881, 5004,\n",
-       "       5125, 5129, 5213, 5273, 5426, 5451, 5493, 5536, 5536, 5568, 5670,\n",
-       "       5781, 5791, 6082, 6164, 6199, 6427, 6429, 6503, 6606, 6981, 7057,\n",
-       "       7134, 7191, 7322, 7336, 7438, 7474, 7577, 7650, 7785, 7811, 7842,\n",
-       "       7945, 8157, 8184, 8290, 8371, 8577, 8599, 8727, 8738, 8797, 8848,\n",
-       "       8935, 8982, 8996, 9121, 9455, 9580, 9744, 9818, 9921, 9948, 9965,\n",
-       "       9979])"
+       "array([  29,  104,  125,  342,  475,  481,  777,  781,  888, 1088, 1168,\n",
+       "       1210, 1249, 1288, 1531, 1746, 2108, 2281, 2356, 2359, 2491, 2724,\n",
+       "       2737, 2835, 3100, 3153, 3236, 3266, 3344, 3397, 3432, 3524, 3653,\n",
+       "       3760, 3778, 3990, 4008, 4084, 4240, 4262, 4270, 4284, 4459, 4467,\n",
+       "       4508, 4513, 4531, 4623, 4675, 4777, 4863, 4995, 5033, 5184, 5223,\n",
+       "       5456, 5502, 5522, 5540, 5570, 5670, 5684, 5687, 5871, 6398, 6434,\n",
+       "       6621, 6871, 7051, 7160, 7163, 7304, 7335, 7517, 7565, 7584, 7620,\n",
+       "       7737, 7895, 7900, 7908, 8118, 8179, 8185, 8589, 8845, 8899, 8947,\n",
+       "       9002, 9027, 9190, 9234, 9264, 9368, 9453, 9685, 9722, 9847, 9914,\n",
+       "       9956])"
       ]
      },
      "execution_count": null,
@@ -705,6 +705,125 @@
    "source": [
     "is_sorted(X)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Permutation and fisher yates shuffling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swap(X, i, j): X[i], X[j] = X[j], X[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perm(X, idx=0):\n",
+    "    if idx == len(X)-1:\n",
+    "        print(X)\n",
+    "    else:\n",
+    "        for i in range(idx, len(X)):\n",
+    "            swap(X, idx, i)\n",
+    "            perm(X, idx+1)\n",
+    "            swap(X, i, idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 3, 2]\n",
+      "[2, 1, 3]\n",
+      "[2, 3, 1]\n",
+      "[3, 2, 1]\n",
+      "[3, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "perm([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fisher_yates(X):\n",
+    "    for i in range(len(X)-1, 0, -1):\n",
+    "        print(i)\n",
+    "        j = np.random.randint(i+1)\n",
+    "        swap(X, i, j)\n",
+    "    return(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 2]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fisher_yates(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
