--- a/module17.ipynb
+++ b/module17.ipynb
@@ -443,6 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "class TreeNode:\n",
     "    def __init__(self, key, val, L=None, R=None):\n",
     "        self.key, self.val, self.L, self.R = key, val, L, R\n",
@@ -495,7 +496,10 @@
     "            self.L.inorder()\n",
     "        print(f'{self.key} - {self.val}')\n",
     "        if self.R:\n",
-    "            self.R.inorder()"
+    "            self.R.inorder()\n",
+    "            \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.key} - {self.val}'"
    ]
   },
   {
@@ -650,6 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "class BinaryTree:\n",
     "    def __init__(self, root=None):\n",
     "        self.root = root\n",
@@ -889,6 +894,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def _rotate_left(self):\n",
     "    R, R_L = self.R, None\n",
     "    if R: R_L, self.R.L = self.R.L, self\n",
@@ -902,6 +908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "TreeNode._rotate_left = _rotate_left"
    ]
   },
@@ -911,6 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def _rotate_right(self):\n",
     "    L, L_R = self.L, None\n",
     "    if L: L_R, self.L.R = self.L.R, self\n",
@@ -924,6 +932,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "TreeNode._rotate_right = _rotate_right"
    ]
   },
@@ -1102,6 +1111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def _height(self):\n",
     "    height_L = self.L._height() if self.L else 0\n",
     "    height_R = self.R._height() if self.R else 0\n",
@@ -1114,6 +1124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "TreeNode._height = _height"
    ]
   },
@@ -1123,6 +1134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def height(node):\n",
     "    return node._height() if node else 0"
    ]
@@ -1235,6 +1247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def _balance(self):\n",
     "    return height(self.R) - height(self.L)"
    ]
@@ -1245,6 +1258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "TreeNode._balance = _balance"
    ]
   },
@@ -1254,6 +1268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def balance(node):\n",
     "    return node._balance() if node else 0"
    ]
@@ -1291,6 +1306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def _rebalance(self):\n",
     "    bal = self._balance()\n",
     "    if   bal == -2:\n",
@@ -1310,6 +1326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "TreeNode._rebalance = _rebalance"
    ]
   },
@@ -1687,6 +1704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "class AVLTreeNode(TreeNode):\n",
     "    def __init__(self, key, val):\n",
     "        super().__init__(key, val)\n",
@@ -1705,6 +1723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "class AVLBinaryTree:\n",
     "    def __init__(self, root=None):\n",
     "        self.root = root\n",
