basic graph stuff

--- a/module19.ipynb
+++ b/module19.ipynb
@@ -262,6 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "class Heap3:\n",
     "    def __init__(self, entries=None):\n",
     "        if entries is None: entries = []\n",
@@ -312,7 +313,10 @@
     "        \n",
     "    def _heapify(self):\n",
     "        for i in reversed(range(len(self._entries))):\n",
-    "            self._downheap(i)"
+    "            self._downheap(i)\n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        return len(self._entries)"
    ]
   },
   {
